k8s-probes-demo/storageclass.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: storage-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        volumeMounts:
        - name: storage
          mountPath: /opt
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: training-pvc
