k8s-probes-demo/app1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  labels:
    name: my-app
spec:
  replicas: 3
  selector:
    matchLabels:
      name: my-app  
  template:
    metadata:
      labels:
        name: my-app  
    spec:
      containers:
      - name: my-app
        image: nginx:latest
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    name: my-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
