k8s-probes-demo/app2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-1
  labels:
    name: my-app-1  
spec:
  replicas: 3
  selector:
    matchLabels:
      name: my-app-1 
  template:
    metadata:
      labels:
        name: my-app-1 
    spec:
      containers:
      - name: my-app
        image: httpd:latest
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: my-service-1
spec:
  selector:
    name: my-app-1  
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
