k8s-probes-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: readiness-service
spec:
  selector:
    app: readiness-demo
  ports:
  - port: 80
    targetPort: 80
