k8s-probes-demo/services.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    aws: devops
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376

---

apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  labels:
    aws: devops
spec:
  containers:
  - name: my-app
    image: nginx:latest
    ports:
    - containerPort: 80
  - name: my-app
    image: jenkins/jenkins:latest
    ports:
    - containerPort: 8080
